Fixed design issues and white space on several pages. Changed map for desktop. Fixed bottom borders from moving at different heights

--- a/src/About.css
+++ b/src/About.css
@@ -7,7 +7,11 @@
 }
 
 .go-back-btn{
-    @apply absolute text-xl font-semibold left-0 right-0 w-32 mx-auto z-50
+    @apply absolute bottom-16 text-xl font-semibold left-0 right-0 w-32 mx-auto z-50
+}
+
+body.dark-mode .go-back-btn{
+    @apply bottom-[4.15rem]
 }
 
 .go-back-btn:hover{
@@ -15,7 +19,7 @@
 }
 
 .go-back-border{
-    @apply absolute
+    @apply absolute bottom-16
 }
 
 .about-title-container{
@@ -23,7 +27,7 @@
 }
 
 .team-member-container{
-    @apply mb-4
+    @apply mb-10
 }
 
 .team-member{
@@ -31,6 +35,56 @@
 }
 
 .about-icon-container{
-    @apply mt-12
+    @apply absolute bottom-0 right-0 left-0
 }
 
+@media(min-width: 600px){
+    .about-icon-container{
+        @apply absolute -bottom-[3.5rem] right-0 left-0 
+    }
+
+    .team-member-container{
+        @apply mt-10
+    }
+    
+    .about-title-container{
+        @apply mb-16
+    }
+
+    .go-back-btn{
+        @apply absolute bottom-12
+    }
+
+    .go-back-border{
+        @apply absolute bottom-12
+    }
+    
+    body.dark-mode .go-back-btn{
+        @apply bottom-[3.2rem]
+    }
+    
+}
+
+@media(min-width: 1280px){
+    .about-icon-container{
+        @apply absolute bottom-16 right-0 left-0 
+    }
+
+    .team-member-container{
+        @apply mt-6 mb-0
+    }
+    
+    .about-title-container{
+        @apply mb-2
+    }
+
+    .go-back-btn{
+        @apply absolute bottom-12
+    }
+
+    .go-back-border{
+        @apply absolute bottom-12
+    }
+    
+    
+}
