--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 html,
 body{
-  @apply  overflow-x-hidden 
+  @apply  overflow-x-hidden
 }
 
 body{
@@ -20,11 +20,11 @@ body.dark-mode{
 }
 
 body.dark-mode select{
-  @apply bg-white text-black
+  @apply bg-white 
 }
 
 body.dark-mode input{
-  @apply bg-white text-black
+  @apply bg-white 
 }
 
 .app-container {
